# reddit-data-mcp

./: .gitignore  .mcp.json  README.md  skill.md
.claude-plugin/: marketplace.json  plugin.json
server/: __main__.py  pyproject.toml  server.py
skills/reddit-data/: SKILL.md
