[project]
name = "reddit-sentiment-mcp"
version = "0.1.0"
description = "Reddit sentiment analysis MCP server using PullPush API"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
