[project]
name = "reddit-sentiment-mcp"
version = "0.2.0"
description = "Reddit data MCP server — hybrid Reddit .json + Arctic-Shift backend"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
